syntax = "proto3";
import "Sha1Wire.proto";
option csharp_namespace = "SourceCode.Chasm.IO.Proto.Wire";

	message AuditWire
	{
		string Name = 1;

		int64 Time = 2; // Milliseconds

		int32 Offset = 3; // Minutes
	}

	message CommitWire
	{
		repeated Sha1Wire Parents = 1;

		Sha1Wire TreeId = 2;
		
		AuditWire Author = 3;
		
		AuditWire Committer = 4;
		
		string Message = 5;
	}
