syntax = "proto3";
option csharp_namespace = "SourceCode.Chasm.Serializer.Proto.Wire";

  // Sha1
  message Sha1Wire
  {
    bool Set = 1;
    bytes Data = 2; // Expected to be 20 bytes
  }

  // NodeKind
  enum NodeKindWire
  {
    Blob = 0; // Default
    Tree = 1;
  }

  // TreeNode
  message TreeWireNode
  {
    string Name = 1;

    NodeKindWire Kind = 2;

    Sha1Wire NodeId = 3;

    bool HasData = 4;
    bytes Data = 5;
  }

  // Tree
  message TreeWire
  {
    repeated TreeWireNode Nodes = 1;
  }
