using System.Diagnostics.CodeAnalysis;

namespace SourceCode.Chasm.Serializer.Proto.Wire
{
    [ExcludeFromCodeCoverage]
    partial class WireReflection
    {
    }

    [ExcludeFromCodeCoverage]
    partial class Sha1Wire
    {
    }

    [ExcludeFromCodeCoverage]
    partial class AuditWire
    {
    }

    [ExcludeFromCodeCoverage]
    partial class CommitWire
    {
    }

    [ExcludeFromCodeCoverage]
    partial class CommitIdWire
    {
    }

    [ExcludeFromCodeCoverage]
    partial class TreeWireNode
    {
    }

    [ExcludeFromCodeCoverage]
    partial class TreeWire
    {
    }
}
